chore: batch-upload notes and config log path